LPS-53259 - Just adding padding onto the element doesn't solve the actual problem, which is that an anchored float is being put inside of a span, and the entire structure should be aligned correctly instead

--- a/portal-web/docroot/html/css/taglib/header.css
+++ b/portal-web/docroot/html/css/taglib/header.css
@@ -3,16 +3,21 @@
 .taglib-header {
 	border-bottom: 1px solid transparent;
 	margin-bottom: 1em;
+	padding-bottom: 10px;
 
 	.header-title {
 		@include ellipsis;
 
 		margin: 0.1em;
-		padding-bottom: 5px;
+		vertical-align: middle;
 	}
 
-	.header-back-to a {
-		float: left;
-		padding: 0.25em 0.5em 0 0;
+	.header-back-to {
+		display: inline-block;
+		vertical-align: middle;
+
+		a {
+			padding: 0 0.3em 0 0;
+		}
 	}
 }
